--- a/main/res/values-lt/strings.xml
+++ b/main/res/values-lt/strings.xml
@@ -32,6 +32,7 @@
     <string name="gchqceleb">Geocaching HQ Celebration</string>
     <string name="gps">GPS nuotykių paroda</string>
     <string name="block">Geocaching HQ Block Party</string>
+    <string name="userdefined">User defined cache</string>
     <string name="unknown">Nežinomo tipo</string>
     <!-- cache sizes -->
     <string name="cache_size_micro">Mikro</string>
@@ -207,8 +208,6 @@
     <string name="err_waypoint_cache_unknown">c:geo nežino, kokiai slėptuvei norite pridėti papildomą tašką.</string>
     <string name="err_waypoint_add_failed">c:geo nepavyko pridėti papildomo taško.</string>
     <string name="err_point_unknown_position">c:geo neranda Jūsų buvimo vietos.</string>
-    <string name="err_point_no_position_given_title">Reikalinga informacija</string>
-    <string name="err_point_no_position_given">Užpildykite bent platumą ir ilgumą arba atstumą ir azimutą. Taip pat galite užpildyt ir visus keturis laukelius.</string>
     <string name="err_point_bear_and_dist_title">Reikalinga pagalba?</string>
     <string name="err_point_bear_and_dist">Užpildykite azimutą ir atstumą. Azimutas tai nuo 0 iki 360 laipsnių kampas nuo šiaurės. Atstumas nereikalauja matavimo vienetų.</string>
     <string name="err_log_load_data">c:geo negali įkelti duomenų reikalingų apsilankymui įrašyti.</string>
@@ -241,7 +240,7 @@
     <string name="warn_search_help_tb">Įveskite keliauninko kodą. Pvz. \"TB5303E\".</string>
     <string name="warn_log_text_fill">Prašome įrašyti įrašo tekstą.</string>
     <string name="warn_load_images">c:geo nepavyko įkelti nuotraukų.</string>
-    <string name="warn_invalid_mapfile">Pasirinktas žemėlapio failas nėra mapsforge 0.3.0 versijos failas.\nIšsaugoti žemėlapiai yra nepasiekiami.</string>
+    <string name="warn_invalid_mapfile">The selected map file is not a valid mapsforge map file or uses an unsupported version.\n(c:geo currently supports v3 to v5 / v3 only if you are using \"Old Mapfsforge V3\" setting.)\n\nOffline maps are not available.</string>
     <string name="warn_nonexistant_mapfile">Pasirinktas žemėlapio failas neegzistuoja.\nIšsaugoti žemėlapiai yra nepasiekiami.</string>
     <string name="warn_rendertheme_missing">Nerasta žemėlapio tema.</string>
     <string name="warn_pocket_query_select">Nepasirinktas joks Pocket query.</string>
@@ -272,6 +271,10 @@
     <string name="warn_discard_changes">Neišsaugoti kelio taškai atmesti!</string>
     <string name="err_request_popup_info">c:geo nepavyko gauti slėptuvės iškylančios informacijos.</string>
     <string name="warn_log_load_additional_data">c: geo nepavyko įkelti papildomų duomenų (keliauninkai/mėgstamiausių taškų) registravimui.</string>
+    <string name="more_information">More information</string>
+    <string name="warn_gm_not_available">Google Maps not available.</string>
+    <string name="switch_to_mf">Your Google Play Service is outdated. Do you want to switch to Mapsforge map provider instead?</string>
+    <string name="switched_to_mf">Default map switched to Mapsforge map provider. Restart your map now.</string>
     <!-- location service -->
     <string name="loc_last">Paskutinė žinoma vieta</string>
     <string name="loc_net">Tinklas</string>
@@ -476,7 +479,7 @@
     <string name="settings_title_cachedetails">Slėptuvės informacija</string>
     <string name="settings_summary_cachedetails">Pritaikyti vaizdą slėptuvės informacijai.</string>
     <string name="settings_title_offlinedata">Duomenys darbui be interneto</string>
-    <string name="settings_summary_offlinedata">Konfigūruokite duomenų išsaugojimą.</string>
+    <string name="settings_summary_offlinedata">Configure the data to be saved for offline use, the storage location and directories for GPX files.</string>
     <string name="settings_title_logging">Registravimas</string>
     <string name="settings_summary_logging">Nustatyti Jūsų parašą ir registravimosi parinktis.</string>
     <string name="settings_title_map">Žemėlapis</string>
@@ -655,6 +658,8 @@
     <string name="init_mapsource_select">Pasirinkite žemėlapio šaltinį</string>
     <string name="settings_title_scale_map_text">Teksto dydis žemėlapyje</string>
     <string name="settings_summary_scale_map_text">Teksto dydis išsaugotame žemėlapyje nustatomas automatiškai pagal prietaiso dpi</string>
+    <string name="settings_title_map_manualrotation_disabled">Manual map rotation</string>
+    <string name="settings_summary_map_manualrotation_disabled">Disable controls for manual map rotation</string>
     <string name="init_map_directory_description">Katalogas su išsaugotais žemėlapiais</string>
     <string name="init_gpx_exportdir">GPX eksportavimo katalogas</string>
     <string name="init_gpx_importdir">GPX importavimo katalogas</string>
@@ -662,6 +667,7 @@
     <string name="init_dataDir_note">Galite pasirinkti saugoti papildomus slėptuvių duomenis (užuominas, nuotraukas, …) išorinėje atmintinėje (pseudo ar tikroje išorinėje SD atmintinėje, priklausomai nuo jūsų įrenginio).</string>
     <string name="init_maptrail">Rodyti pėdsaką</string>
     <string name="init_summary_maptrail">Rodyti pėdsaką žemėlapyje</string>
+    <string name="init_trailcolor">Trail color</string>
     <string name="init_share_after_export">Po GPX eksportavimo atidaryti bendrinimo meniu</string>
     <string name="init_include_found_status">Įtraukti \"Rasta\" būseną</string>
     <string name="init_trackautovisit">Apsilankyti su keliauninkais</string>
@@ -749,8 +755,8 @@
     <string name="init_summary_proximityNotificationGeneral">Play a single notification if any cache or waypoint currently visible on the map is closer than far distance or near distance. Different tones are used for the two distances.</string>
     <string name="init_proximityNotificationSpecific">Specific waypoint proximity notification</string>
     <string name="init_summary_proximityNotificationSpecific">Play a repeated notification if the currently selected cache or waypoint is closer than far distance or near distance. Works if cache or waypoint details are opened, cache or waypoint popups on map are shown or compass is active. Different tones are used for the two distances.</string>
-    <string name="far_distance">tolimas atstumas</string>
-    <string name="near_distance">artimas atstumas</string>
+    <string name="far_distance">Far distance</string>
+    <string name="near_distance">Near distance</string>
     <!-- map sources -->
     <string name="map_source_google_map">Google: Žemėlapis</string>
     <string name="map_source_google_satellite">Google: Palydovas</string>
@@ -943,7 +949,6 @@
     <string name="cache_menu_sygic_drive">Sygic (vairuoti)</string>
     <string name="cache_menu_radar">Radaras</string>
     <string name="cache_menu_map">Žemėlapis</string>
-    <string name="cache_menu_mfbeta">Mapsforge Beta</string>
     <string name="cache_menu_rmaps">Rmaps</string>
     <string name="cache_menu_map_ext">Kitos išorinės programos</string>
     <string name="cache_menu_streetview">Street View</string>
@@ -973,7 +978,7 @@
     <string name="ignore_confirm_title">Būk atsargus</string>
     <string name="ignore_confirm_message">Ignoruota slėptuvė reiškia, kad ši slėptuvė niekada neatsiras įkeliant duomenis iš geocaching.com. Jūs galėsite pamatyti slėptuvę tik nebeignoruojant svetainėje.</string>
     <string name="cache_status">Būsena</string>
-    <string name="cache_stored">Išsaugota</string>
+    <string name="cache_stored">Stored</string>
     <string name="cache_status_offline_log">Išsaugotas įrašas</string>
     <string name="cache_status_found">Rasta</string>
     <string name="cache_not_status_found">Nerasta</string>
@@ -995,6 +1000,8 @@
     <string name="cache_status_stored_morethanthirtydays">Before last thirty days</string>
     <string name="cache_geocode">Geo kodas</string>
     <string name="cache_name">Pavadinimas</string>
+    <string name="cache_name_set">Set cachename</string>
+    <string name="cache_name_updated">Cachename updated</string>
     <string name="cache_type">Tipas</string>
     <string name="cache_size">Dydis</string>
     <string name="cache_distance">Atstumas</string>
@@ -1025,6 +1032,15 @@
     <string name="cache_share_field">Bendrinti</string>
     <string name="cache_time_full_hours">valanda (-os)</string>
     <string name="cache_listed_on">Publikuota %s</string>
+    <string name="user_defined_caches">User defined caches</string>
+    <string name="create_internal_cache">Create user defined cache</string>
+    <string name="internal_cache_default_name">User defined cache #%1$d</string>
+    <string name="internal_cache_default_description">This is a user defined cache</string>
+    <string name="internal_cache_default_owner">You</string>
+    <string name="internal_goto_targets_title">\'Go to\' targets</string>
+    <string name="internal_goto_targets_description">This cache stores your recent \'Go to\' targets</string>
+    <string name="init_longtap_udc">Long tap on map</string>
+    <string name="init_summary_longtap_udc">Long tap on map to create a user defined cache</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Ieškoma failų\n</string>
@@ -1111,11 +1127,6 @@
     <string name="waypoint_duplicated">Nuorodos taškas nukopijuotas</string>
     <string name="waypoint_copy_of">Kopija</string>
     <string name="waypointcalc_notes_prompt">Įrašykite pastabas čia…</string>
-    <string name="search_history">Istorija</string>
-    <string name="search_history_empty">Nėra ankstesnių kelionės tikslų</string>
-    <string name="search_remove_destination">Kelionės tikslas pašalintas</string>
-    <string name="search_clear_history">Išvalyti istoriją</string>
-    <string name="search_history_cleared">Istorija išvalyta</string>
     <string name="waypoint_coordinate_formats_plain">Paprastas</string>
     <string name="from_clipboard">Iš mainų srities</string>
     <string name="copy_to_clipboard">Kopijuoti į mainų sritį</string>
@@ -1689,6 +1700,10 @@
     <string name="color_blue">Mėlyna</string>
     <string name="color_green">Žalia</string>
     <string name="color_grey">Pilka</string>
+    <string name="color_orange">Orange</string>
+    <string name="color_red">Red</string>
+    <string name="color_turquoise">Turquoise</string>
+    <string name="color_black">Black</string>
     <!-- number input -->
     <string name="number_input_title">Enter a value between %1$s and %2$s</string>
     <string name="number_input_err_boundarymin">Entered value is too small - reset to min value</string>
