--- a/cgeo-contacts/res/values-sk/strings.xml
+++ b/cgeo-contacts/res/values-sk/strings.xml
@@ -4,4 +4,10 @@
     <string name="app_name">c:geo - kontakty (doplnok)</string>
     <string name="contact_not_found">Kontakt s aliasom/prezývkou %s nebol nájdený. Najprv si ho pridaj do kontaktov.</string>
     <string name="multiple_matches">Viacnásobná zhoda</string>
+    <!-- permission handling -->
+    <string name="ask_again">Ask me again</string>
+    <string name="close">Close</string>
+    <string name="goto_app_details">Open Application Info</string>
+    <string name="contacts_permission_request_denied">You must give \"c:geo - contacts\" read permission for your address books to search the cacher name there.</string>
+    <string name="contacts_permission_request_explanation">\"c:geo - contacts\" can find the user in your address book by searching the cacher name. To do this, you must authorize the application for reading.</string>
 </resources>
