--- a/main/res/values-ca/strings.xml
+++ b/main/res/values-ca/strings.xml
@@ -32,6 +32,7 @@
     <string name="gchqceleb">Geocaching HQ Celebration</string>
     <string name="gps">GPS Adventures Exhibit</string>
     <string name="block">Geocaching HQ Block Party</string>
+    <string name="userdefined">User defined cache</string>
     <string name="unknown">Desconegut</string>
     <!-- cache sizes -->
     <string name="cache_size_micro">Micro</string>
@@ -207,8 +208,6 @@
     <string name="err_waypoint_cache_unknown">El c:geo no sap a quin catxé voleu afegir la fita.</string>
     <string name="err_waypoint_add_failed">El c:geo no ha pogut afegir la fita.</string>
     <string name="err_point_unknown_position">El c:geo no pot reconèixer on ets.</string>
-    <string name="err_point_no_position_given_title">Cal informació</string>
-    <string name="err_point_no_position_given">Ompliu la latitud i la longitud o la distància i la direcció. També podeu omplir els quatre camps.</string>
     <string name="err_point_bear_and_dist_title">Necessiteu ajuda?</string>
     <string name="err_point_bear_and_dist">Ompliu el rumb i la distància. El rumb son angles del 0º al 360º respecte al Nord. La distància no necessita unitats.</string>
     <string name="err_log_load_data">El c:geo no pot carregar les dades necessàries per registrar la visita.</string>
@@ -241,7 +240,7 @@
     <string name="warn_search_help_tb">Introduïu el codi d\'un traçable. Per exemple, \"LPAYKV\".</string>
     <string name="warn_log_text_fill">Introduïu un text per al vostre registre.</string>
     <string name="warn_load_images">El c:geo no ha pogut carregar les imatges.</string>
-    <string name="warn_invalid_mapfile">El fitxer de mapa seleccionat no és un fitxer vàlid de mapa mapsforge versió 0.3.0 . \nEls mapes fora de línia no estan disponibles.</string>
+    <string name="warn_invalid_mapfile">The selected map file is not a valid mapsforge map file or uses an unsupported version.\n(c:geo currently supports v3 to v5 / v3 only if you are using \"Old Mapfsforge V3\" setting.)\n\nOffline maps are not available.</string>
     <string name="warn_nonexistant_mapfile">No existeix el fitxer de mapa seleccionat. \nNo estan disponibles els mapes fora línia.</string>
     <string name="warn_rendertheme_missing">No s\'ha trobat l\'esquema de colors del mapa.</string>
     <string name="warn_pocket_query_select">No hi ha cap pocket query seleccionada.</string>
@@ -272,6 +271,10 @@
     <string name="warn_discard_changes">Descartat els canvis del punt de referència!</string>
     <string name="err_request_popup_info">El c:geo no ha pogut obtenir la informació emergent del catxé.</string>
     <string name="warn_log_load_additional_data">c:geo no ha pogut carregar les dades addicionals (trackables/favorit punts) per al registre.</string>
+    <string name="more_information">More information</string>
+    <string name="warn_gm_not_available">Google Maps not available.</string>
+    <string name="switch_to_mf">Your Google Play Service is outdated. Do you want to switch to Mapsforge map provider instead?</string>
+    <string name="switched_to_mf">Default map switched to Mapsforge map provider. Restart your map now.</string>
     <!-- location service -->
     <string name="loc_last">Última coneguda</string>
     <string name="loc_net">Xarxa</string>
@@ -470,7 +473,7 @@
     <string name="settings_title_cachedetails">Detalls del catxé</string>
     <string name="settings_summary_cachedetails">Personalitza la pantalla d\'informació del catxé.</string>
     <string name="settings_title_offlinedata">Dades fora de línia</string>
-    <string name="settings_summary_offlinedata">Configure other offline data storage.</string>
+    <string name="settings_summary_offlinedata">Configure the data to be saved for offline use, the storage location and directories for GPX files.</string>
     <string name="settings_title_logging">Registre</string>
     <string name="settings_summary_logging">Configura la signatura i el conjunt d\'opcions de connexió.</string>
     <string name="settings_title_map">Mapa</string>
@@ -649,6 +652,8 @@
     <string name="init_mapsource_select">Selecciona l\'origen del mapa</string>
     <string name="settings_title_scale_map_text">Escala el text del mapa</string>
     <string name="settings_summary_scale_map_text">Escala les etiquetes de text dels mapes fora de línia en concordança amb els punts per polzada (dpi) del teu dispositiu.</string>
+    <string name="settings_title_map_manualrotation_disabled">Manual map rotation</string>
+    <string name="settings_summary_map_manualrotation_disabled">Disable controls for manual map rotation</string>
     <string name="init_map_directory_description">Directori amb els mapes fora de línia</string>
     <string name="init_gpx_exportdir">Directori per a l\'exportació GPX</string>
     <string name="init_gpx_importdir">Directori per a la importació GPX</string>
@@ -656,6 +661,7 @@
     <string name="init_dataDir_note">Podeu triar emmagatzemar les dades addicionals per als geoamagatalls (pistes, registre d\'imatges, …) en l\'emmagatzematge extern (targeta SD externa emulada o real, en funció del dispositiu).</string>
     <string name="init_maptrail">Mostra el traçat</string>
     <string name="init_summary_maptrail">Mostra el traçat al mapa</string>
+    <string name="init_trailcolor">Trail color</string>
     <string name="init_share_after_export">Obre el menú per compartir després de l\'exportació a GPX</string>
     <string name="init_include_found_status">Inlcou l\'estat \"Trobat\"</string>
     <string name="init_trackautovisit">Visita TBs</string>
@@ -743,8 +749,8 @@
     <string name="init_summary_proximityNotificationGeneral">Play a single notification if any cache or waypoint currently visible on the map is closer than far distance or near distance. Different tones are used for the two distances.</string>
     <string name="init_proximityNotificationSpecific">Specific waypoint proximity notification</string>
     <string name="init_summary_proximityNotificationSpecific">Play a repeated notification if the currently selected cache or waypoint is closer than far distance or near distance. Works if cache or waypoint details are opened, cache or waypoint popups on map are shown or compass is active. Different tones are used for the two distances.</string>
-    <string name="far_distance">far distance</string>
-    <string name="near_distance">near distance</string>
+    <string name="far_distance">Far distance</string>
+    <string name="near_distance">Near distance</string>
     <!-- map sources -->
     <string name="map_source_google_map">Google: mapa</string>
     <string name="map_source_google_satellite">Google: satèl·lit</string>
@@ -923,7 +929,6 @@
     <string name="cache_menu_sygic_drive">Sygic (Conduir)</string>
     <string name="cache_menu_radar">Radar</string>
     <string name="cache_menu_map">Mapa</string>
-    <string name="cache_menu_mfbeta">Mapsforge Beta</string>
     <string name="cache_menu_rmaps">Rmaps</string>
     <string name="cache_menu_map_ext">Altres aplicacions externes</string>
     <string name="cache_menu_streetview">Street View</string>
@@ -953,7 +958,7 @@
     <string name="ignore_confirm_title">Aneu amb compte</string>
     <string name="ignore_confirm_message">Al ignorar un catxé , farà que aquest catxé no torni a aparèixer a les càrregues de dades de geocaching.com. Només serà capaç de veure\'l  designorant-ho a la pàgina web.</string>
     <string name="cache_status">Estat</string>
-    <string name="cache_stored">Desats</string>
+    <string name="cache_stored">Stored</string>
     <string name="cache_status_offline_log">Registre desat</string>
     <string name="cache_status_found">Trobat</string>
     <string name="cache_not_status_found">No s\'ha trobat</string>
@@ -975,6 +980,8 @@
     <string name="cache_status_stored_morethanthirtydays">Before last thirty days</string>
     <string name="cache_geocode">Geocodi</string>
     <string name="cache_name">Nom</string>
+    <string name="cache_name_set">Set cachename</string>
+    <string name="cache_name_updated">Cachename updated</string>
     <string name="cache_type">Tipus</string>
     <string name="cache_size">Mida</string>
     <string name="cache_distance">Distància</string>
@@ -1005,6 +1012,15 @@
     <string name="cache_share_field">Comparteix</string>
     <string name="cache_time_full_hours">en punt</string>
     <string name="cache_listed_on">Llistat a %s</string>
+    <string name="user_defined_caches">User defined caches</string>
+    <string name="create_internal_cache">Create user defined cache</string>
+    <string name="internal_cache_default_name">User defined cache #%1$d</string>
+    <string name="internal_cache_default_description">This is a user defined cache</string>
+    <string name="internal_cache_default_owner">You</string>
+    <string name="internal_goto_targets_title">\'Go to\' targets</string>
+    <string name="internal_goto_targets_description">This cache stores your recent \'Go to\' targets</string>
+    <string name="init_longtap_udc">Long tap on map</string>
+    <string name="init_summary_longtap_udc">Long tap on map to create a user defined cache</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">S\'està buscant els fitxers\na</string>
@@ -1091,11 +1107,6 @@
     <string name="waypoint_duplicated">Punt de ruta duplicat</string>
     <string name="waypoint_copy_of">Còpia de</string>
     <string name="waypointcalc_notes_prompt">Afegeix aquí les notes…</string>
-    <string name="search_history">Historial</string>
-    <string name="search_history_empty">No hi ha destinacions prèvies</string>
-    <string name="search_remove_destination">S\'ha esborrat la destinació</string>
-    <string name="search_clear_history">Esborra l\'historial</string>
-    <string name="search_history_cleared">S\'ha esborrat l\'historial</string>
     <string name="waypoint_coordinate_formats_plain">Senzill</string>
     <string name="from_clipboard">Des del porta-retalls</string>
     <string name="copy_to_clipboard">Copia al porta-retalls</string>
@@ -1645,6 +1656,10 @@
     <string name="color_blue">Blue</string>
     <string name="color_green">Green</string>
     <string name="color_grey">Grey</string>
+    <string name="color_orange">Orange</string>
+    <string name="color_red">Red</string>
+    <string name="color_turquoise">Turquoise</string>
+    <string name="color_black">Black</string>
     <!-- number input -->
     <string name="number_input_title">Enter a value between %1$s and %2$s</string>
     <string name="number_input_err_boundarymin">Entered value is too small - reset to min value</string>
