--- a/main/res/values-es/strings.xml
+++ b/main/res/values-es/strings.xml
@@ -32,6 +32,7 @@
     <string name="gchqceleb">Geocaching HQ Celebration</string>
     <string name="gps">Exhibición de cachés GPS</string>
     <string name="block">Geocaching HQ Block Party</string>
+    <string name="userdefined">User defined cache</string>
     <string name="unknown">De tipo desconocido</string>
     <!-- cache sizes -->
     <string name="cache_size_micro">Micro</string>
@@ -207,8 +208,6 @@
     <string name="err_waypoint_cache_unknown">c:geo no sabe a qué caché quieres añadir un punto de referencia.</string>
     <string name="err_waypoint_add_failed">c:geo falló al añadir tu punto de referencia.</string>
     <string name="err_point_unknown_position">c:geo no puede reconocer dónde estás.</string>
-    <string name="err_point_no_position_given_title">Información obligatoria</string>
-    <string name="err_point_no_position_given">Rellena como mínimo latitud y longitud o distancia y orientación. También puedes rellenar los cuatro campos.</string>
     <string name="err_point_bear_and_dist_title">¿Necesitas ayuda?</string>
     <string name="err_point_bear_and_dist">Rellena ambos, orientación y distancia. La orientación es un ángulo de 0 a 360 grados relativo al norte. Distancia con o sin unidades.</string>
     <string name="err_log_load_data">c:geo no puede cargar los datos necesarios para registrar la visita.</string>
@@ -241,7 +240,7 @@
     <string name="warn_search_help_tb">Escribe el código del rastreable. Por ejemplo \"TB29QMZ\".</string>
     <string name="warn_log_text_fill">Escribe algún texto de registro.</string>
     <string name="warn_load_images">Error al cargar las imágenes.</string>
-    <string name="warn_invalid_mapfile">El archivo de mapa seleccionado no es un archivo de mapsforge versión 0.3.0 válido.\nLos mapas sin conexión no están disponibles.</string>
+    <string name="warn_invalid_mapfile">The selected map file is not a valid mapsforge map file or uses an unsupported version.\n(c:geo currently supports v3 to v5 / v3 only if you are using \"Old Mapfsforge V3\" setting.)\n\nOffline maps are not available.</string>
     <string name="warn_nonexistant_mapfile">El archivo de mapa seleccionado no existe.\nLos mapas sin conexión no están disponibles.</string>
     <string name="warn_rendertheme_missing">No se ha encontrado el esquema de colores del mapa.</string>
     <string name="warn_pocket_query_select">No ha seleccionado ninguna Pocket Query.</string>
@@ -272,6 +271,10 @@
     <string name="warn_discard_changes">¡Cambios no guardados en el waypoint descartados!</string>
     <string name="err_request_popup_info">c:geo no ha podido obtener la información emergente del caché.</string>
     <string name="warn_log_load_additional_data">c:geo failed to load additional data (trackables/favorite points) for logging.</string>
+    <string name="more_information">More information</string>
+    <string name="warn_gm_not_available">Google Maps not available.</string>
+    <string name="switch_to_mf">Your Google Play Service is outdated. Do you want to switch to Mapsforge map provider instead?</string>
+    <string name="switched_to_mf">Default map switched to Mapsforge map provider. Restart your map now.</string>
     <!-- location service -->
     <string name="loc_last">Última conocida</string>
     <string name="loc_net">Red</string>
@@ -470,7 +473,7 @@
     <string name="settings_title_cachedetails">Detalles del caché</string>
     <string name="settings_summary_cachedetails">Personalizar la visualización de la información de caché.</string>
     <string name="settings_title_offlinedata">Datos sin conexión</string>
-    <string name="settings_summary_offlinedata">Configurar otro almacenamiento de datos sin conexión.</string>
+    <string name="settings_summary_offlinedata">Configure the data to be saved for offline use, the storage location and directories for GPX files.</string>
     <string name="settings_title_logging">Registro</string>
     <string name="settings_summary_logging">Configura tu firma y las opciones de registro.</string>
     <string name="settings_title_map">Mapa</string>
@@ -649,6 +652,8 @@
     <string name="init_mapsource_select">Elegir proveedor de mapas</string>
     <string name="settings_title_scale_map_text">Escalar el texto del mapa</string>
     <string name="settings_summary_scale_map_text">Escala el texto de los mapas sin conexión según los p.p.p. del dispositivo</string>
+    <string name="settings_title_map_manualrotation_disabled">Manual map rotation</string>
+    <string name="settings_summary_map_manualrotation_disabled">Disable controls for manual map rotation</string>
     <string name="init_map_directory_description">Directorio de mapas sin conexión</string>
     <string name="init_gpx_exportdir">Directorio para exportar GPX</string>
     <string name="init_gpx_importdir">Directorio para importar GPX</string>
@@ -656,6 +661,7 @@
     <string name="init_dataDir_note">Puedes elegir almacenar los datos adicionales de los cachés (spoilers, imágenes de los registros, …) en tu almacenamiento externo (emulado o en una tarjeta SD real externa, dependiendo de tu dispositivo).</string>
     <string name="init_maptrail">Mostrar rastro</string>
     <string name="init_summary_maptrail">Muestra el rastro en el mapa</string>
+    <string name="init_trailcolor">Trail color</string>
     <string name="init_share_after_export">Abrir el menú de compartir tras exportar GPX</string>
     <string name="init_include_found_status">Incluir estado \"Encontrado\"</string>
     <string name="init_trackautovisit">Convertir TBs a Visitado</string>
@@ -743,8 +749,8 @@
     <string name="init_summary_proximityNotificationGeneral">Play a single notification if any cache or waypoint currently visible on the map is closer than far distance or near distance. Different tones are used for the two distances.</string>
     <string name="init_proximityNotificationSpecific">Specific waypoint proximity notification</string>
     <string name="init_summary_proximityNotificationSpecific">Play a repeated notification if the currently selected cache or waypoint is closer than far distance or near distance. Works if cache or waypoint details are opened, cache or waypoint popups on map are shown or compass is active. Different tones are used for the two distances.</string>
-    <string name="far_distance">far distance</string>
-    <string name="near_distance">near distance</string>
+    <string name="far_distance">Far distance</string>
+    <string name="near_distance">Near distance</string>
     <!-- map sources -->
     <string name="map_source_google_map">Google: Mapa</string>
     <string name="map_source_google_satellite">Google: Satélite</string>
@@ -923,7 +929,6 @@
     <string name="cache_menu_sygic_drive">Sygic (Coche)</string>
     <string name="cache_menu_radar">Radar</string>
     <string name="cache_menu_map">Ver en mapa</string>
-    <string name="cache_menu_mfbeta">Mapsforge Beta</string>
     <string name="cache_menu_rmaps">Rmaps</string>
     <string name="cache_menu_map_ext">Otras apps externas</string>
     <string name="cache_menu_streetview">Street View</string>
@@ -953,7 +958,7 @@
     <string name="ignore_confirm_title">Ten cuidado</string>
     <string name="ignore_confirm_message">Ignorar un caché significa que este caché no aparecerá más cuando cargues datos de geocaching.com. Sólo podrás verlo de nuevo si dejas de ignorarlo desde la página web.</string>
     <string name="cache_status">Estado</string>
-    <string name="cache_stored">Guardados</string>
+    <string name="cache_stored">Stored</string>
     <string name="cache_status_offline_log">Registro guardado</string>
     <string name="cache_status_found">Encontrado</string>
     <string name="cache_not_status_found">No encontrado</string>
@@ -975,6 +980,8 @@
     <string name="cache_status_stored_morethanthirtydays">Before last thirty days</string>
     <string name="cache_geocode">Código GC</string>
     <string name="cache_name">Nombre</string>
+    <string name="cache_name_set">Set cachename</string>
+    <string name="cache_name_updated">Cachename updated</string>
     <string name="cache_type">Tipo</string>
     <string name="cache_size">Tamaño</string>
     <string name="cache_distance">Distancia</string>
@@ -1005,6 +1012,15 @@
     <string name="cache_share_field">Compartir</string>
     <string name="cache_time_full_hours">en punto</string>
     <string name="cache_listed_on">Listado en %s</string>
+    <string name="user_defined_caches">User defined caches</string>
+    <string name="create_internal_cache">Create user defined cache</string>
+    <string name="internal_cache_default_name">User defined cache #%1$d</string>
+    <string name="internal_cache_default_description">This is a user defined cache</string>
+    <string name="internal_cache_default_owner">You</string>
+    <string name="internal_goto_targets_title">\'Go to\' targets</string>
+    <string name="internal_goto_targets_description">This cache stores your recent \'Go to\' targets</string>
+    <string name="init_longtap_udc">Long tap on map</string>
+    <string name="init_summary_longtap_udc">Long tap on map to create a user defined cache</string>
     <!-- editor dialog -->
     <!-- file list base -->
     <string name="file_searching_in">Buscando archivos \nen</string>
@@ -1091,11 +1107,6 @@
     <string name="waypoint_duplicated">Waypoint duplicado</string>
     <string name="waypoint_copy_of">Copia de</string>
     <string name="waypointcalc_notes_prompt">Introduce aquí las notas…</string>
-    <string name="search_history">Historial</string>
-    <string name="search_history_empty">No hay destinos anteriores</string>
-    <string name="search_remove_destination">Destino borrado</string>
-    <string name="search_clear_history">Borrar historial</string>
-    <string name="search_history_cleared">Historial borrado</string>
     <string name="waypoint_coordinate_formats_plain">Sencillo</string>
     <string name="from_clipboard">Desde portapapeles</string>
     <string name="copy_to_clipboard">Copiar al portapapeles</string>
@@ -1646,6 +1657,10 @@ Nombre de archivo:%2$s</string>
     <string name="color_blue">Blue</string>
     <string name="color_green">Green</string>
     <string name="color_grey">Grey</string>
+    <string name="color_orange">Orange</string>
+    <string name="color_red">Red</string>
+    <string name="color_turquoise">Turquoise</string>
+    <string name="color_black">Black</string>
     <!-- number input -->
     <string name="number_input_title">Enter a value between %1$s and %2$s</string>
     <string name="number_input_err_boundarymin">Entered value is too small - reset to min value</string>
