--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1185,6 +1185,7 @@
     <string name="map_modes">Map settings</string>
     <string name="map_trail_show">Show trail</string>
     <string name="map_dot_mode">Use compact icons</string>
+    <string name="map_autorotate">Map autorotate</string>
     <string name="map_circles_show">Show circles</string>
     <string name="map_mycaches_hide">Hide own/found caches</string>
     <string name="map_disabled_hide">Hide disabled caches</string>
