add support for locationless cache type (fix #8010)

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="gchqceleb">Geocaching HQ Celebration</string>
     <string name="gps">GPS Adventures Exhibit</string>
     <string name="block">Geocaching HQ Block Party</string>
+    <string name="locationless">Locationless (Reverse) Cache</string>
     <string name="userdefined">User defined cache</string>
     <string name="unknown">Unknown Type</string>
 
