--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1017,6 +1017,12 @@
     <string name="init_longtap_udc">Long tap on map</string>
     <string name="init_summary_longtap_udc">Long tap on map to create a user defined cache</string>
 
+    <!-- coordinate calculator hints -->
+    <string name="cc_hint_degrees">degrees</string>
+    <string name="cc_hint_minutes">minutes</string>
+    <string name="cc_hint_seconds">seconds</string>
+    <string name="cc_hint_secfractions">fraction of seconds</string>
+
     <!-- editor dialog -->
 
     <!-- file list base -->
